cluster-talos/kubernetes/apps/tools/homepage/test/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-test
spec:
  hostnames:
    - testhome.boeye.net
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage-test
          port: 3000
