cluster-talos/kubernetes/apps/tools/homepage/test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-test
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage-test
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
